# mag-recorder

./: .gitignore  CLAUDE.md  README.md  deploy.toml  install.sh  pyproject.toml
config/: help.toml  mag-recorder-config.toml.template
docs/: PROVENANCE.md  REQUIREMENTS.md  mag-usb-upstream.md
scripts/: build-mag-usb.sh  config-wizard.sh
src/mag_recorder/: __init__.py  __main__.py  cli.py  config.py  configurator.py  contract.py
src/mag_recorder/core/: driver_config.py  packager.py  simulator.py  supervisor.py  uploader.py
systemd/: mag-recorder-upload.service  mag-recorder-upload.timer  mag-recorder.service
tests/: test_config_show_apply.py  test_contract.py  test_driver_config.py  test_packager.py  test_placeholder_guard.py  test_simulator.py  test_supervisor_argv.py  test_uploader.py
