[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mag-recorder"
version = "0.1.0"
description = "Sigmond client: RM3100 magnetometer recorder (wraps mag-usb), PSWS uploader"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "michael.j.hauan@gmail.com"},
]
dependencies = [
    "hs-uploader>=0.1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tomli-w>=1.0",
]

[project.scripts]
mag-recorder = "mag_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
# editable=true so a `git pull` of hs-uploader propagates to this consumer's
# venv without a reinstall.  Matches the suite-wide "one source tree, many
# editable consumers" convention; see sigmond/CLAUDE.md "Fleet upgrade pattern".
hs-uploader = { path = "../hs-uploader", editable = true }
